// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Main with MainChild with no max width 1`] = `
<main
  class="sc-bdvvaa lyEiN"
>
  <div
    class="sc-gsDJrp kJIUA-D"
  >
    foo
  </div>
</main>
`;

exports[`renders Main with all non-default Main options and common MainChild options 1`] = `
<main
  class="sc-bdvvaa hwUMQP"
>
  <div
    class="sc-gsDJrp jVpmmZ"
  >
    foo
  </div>
</main>
`;

exports[`renders Main with defaults 1`] = `
<main
  class="sc-bdvvaa lyEiN"
>
  <div
    class="sc-gsDJrp dHRUpZ"
  >
    foo
  </div>
</main>
`;

exports[`renders Main with not centered content 1`] = `
<main
  class="sc-bdvvaa bufinK"
>
  <div
    class="sc-gsDJrp dHRUpZ"
  >
    foo
  </div>
</main>
`;
